Another set of changes for sonarcube complaince